# technical-spec

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
app/: alembic.ini
app/application/api/: main.py
app/application/api/v1/: handlers.py
app/core/: config.py
app/infra/: postgres.py
app/migrations/: env.py
app/migrations/versions/: 93e406dd35c5_add_migrations.py  a7c40382e1d0_add_migrations.py  b5750d41510b_add_migrations.py  b957f89dd35c_add_migrations.py  fc5eadba2202_add_migrations.py
app/models/: models.py
app/schemas/: tron_schema.py
app/services/: tron_service.py
app/tests/: conftest.py  test_api.py  test_services.py
docker_compose/: app.yaml
